Move to james-project-1.7
git-svn-id: https://svn.apache.org/repos/asf/james/server/trunk@1197776 13f79535-47bb-0310-9956-ffa450edef68